SCOUT-18, SCOUT-20, SCOUT-21, SCOUT-22, SCOUT-25, SCOUT-26 Fixed the maven1 build to download the latest juddi-1.0-SNAPSHOT jars. By default the tests run in embedded mode using juddi. All you need is a mysql juddi database. A juddi.properties file was added in the modules/scout/conf directory.
git-svn-id: https://svn.apache.org/repos/asf/webservices/scout/trunk/modules/scout@495482 13f79535-47bb-0310-9956-ffa450edef68